KSENROLL-13003:   Fix for Format select section in Edit CO not big enough and cutting off text.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@70104 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
@@ -272,6 +272,10 @@ div.jstree-editrule ul.uif-validationMessagesList a {
 
 .format_course_offering{
   width: 150px;
+  select.input-sm {
+    width: 12.5em;
+    height: 32px;
+  }
 }
 
 .days_course_offering{
